--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
   {% else %}
     <p>You are not logged in</p>
     <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'signup' %}">Sign Up</a>
   {% endif %}
 
 {% endblock content %}
