--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>{% block title %}Bookstore{% endblock title %}</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
   </head>
   <body>
     <div class="container">
