--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,10 @@
 {% extends "_base.html" %}
-
+{% load static %}
 {% block title %}Home{% endblock title %}
 
 {% block content %}
   <h1>This is our home page!</h1>
+  <img class="bookcover" src="{% static 'images/dfp.jpg' %}">
   {% if user.is_authenticated %}
     <p>Hi {{ user.email }}!</p> 
     <form action="{% url 'logout' %}" method="post">
