feature/static-content 2024-06-23 22:38
 - Adding static image content and loading
 - addint placehoder js code

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,5 +13,7 @@
       {% endblock content %}
       
     </div>
+    <!-- JavaScript -->
+    <script src="{% static 'js/base.js' %}"></script>
   </body>
 </html>
