--- a/templates/_base.html
+++ b/templates/_base.html
@@ -22,16 +22,16 @@
             <li class="nav-item">
               <a class="nav-link" href="#" onClick="document.getElementById('logoutform').submit()">Logout</a>
             </li>
-            <form id="logoutform" method="POST" action="{% url 'logout' %}">
+            <form id="logoutform" method="POST" action="{% url 'account_logout' %}">
               {% csrf_token %}
               <input type="hidden">
             </form>
             {% else %} 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Log In</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+              <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             {% endif %}
             <li class="nav-item">
