--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,13 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-autoo mb-2 mb-md-0">
             {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="#" onClick="document.getElementById('logoutform').submit()">Logout</a>
+            <li>
+              <a class="nav-link" href="{% url 'account_logout' %}">Log out</a>
             </li>
-            <form id="logoutform" method="POST" action="{% url 'account_logout' %}">
-              {% csrf_token %}
-              <input type="hidden">
-            </form>
             {% else %} 
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
