--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bookstore</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Bookstore</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expand="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
