adding absolute urls
- adding absolute urls
 - removing book.pk references on detail view

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'book_list' %}">Books</a>
+            </li>
           </ul>
         </div>
       </div>
