--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -5,7 +5,10 @@
 {% block content %}
   {% for book in book_list %}
     <div>
-  <h2><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></h2>
+      <h2><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></h2>
+      <p>Author: {{ book.author }}</p>
+      <p>Price: {{ book.price }}
+      <hr>
     </div> 
   {% endfor %}
 {% endblock content %}
