--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load static %}
 
 {% block title %}Books{% endblock title %}
 
@@ -12,3 +13,6 @@
     </div> 
   {% endfor %}
 {% endblock content %}
+
+<!-- javascript -->
+<script type="text/javascript" src="{% static 'toggle_modal.js' %}"></script>
